Oppdatere Dockerfile og bygging